# cs50django

./: pyproject.toml
cs50django/: settings.py  urls.py
encyclopedia/: urls.py  util.py  views.py
encyclopedia/templates/encyclopedia/: create.html  entry.html  error.html  layout.html  search.html
