[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Dmitry Uzunov <duyz@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
markdown2 = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
